# trader

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: sector_map.py  settings.py
core/: analyzer.py  executor.py  monitor.py  orchestrator.py  risk.py
models/: analysis.py  post.py  trade.py
store/: database.py
tests/: test_executor.py  test_risk.py
tests/fixtures/: sample_posts.json
